daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: multitool-daemonset
  labels:
    app: multitool
spec:
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        command: ["sh", "-c", "tail -f /var/log/syslog"]
        volumeMounts:
        - name: varlog
          mountPath: /var/log
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
          type: Directory
