deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: new-app
  template:
    metadata:
      labels:
        app: new-app
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.26.0
        ports:
        - containerPort: 80
      - name: multitool-container
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
