external_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: new-app
  ports:
    - name: nginx-port
      protocol: TCP
      port: 9001
      targetPort: 80
      nodePort: 30001
    - name: multitool-port
      protocol: TCP
      port: 9002
      targetPort: 1180
      nodePort: 30002
  type: NodePort
